# nuxt-modules

./: .gitignore  .gitmodules  AGENTs.md  README.md  package.json  tsconfig.json  turbo.json
modules/wcanvas/: Cargo.toml  package.json  tsconfig.json
modules/wcanvas/.cargo/: config.toml
modules/wcanvas/pkg/: canvas.d.ts  canvas_bg.js  canvas_renderer.d.ts  package.json
modules/wcanvas/src/: error.rs  lib.rs  prelude.rs
modules/wcanvas/src/adapters/renderer/: client_builder.rs  client_input.rs  client_render.rs  client_shapes.rs  client_stub.rs  frame_buffer.rs  mod.rs  renderable.rs  text_shader.wgsl  texture.rs  uniforms.rs  vertex.rs  wgpu_setup.rs
modules/wcanvas/src/adapters/renderer3d/: camera.rs  client_builder.rs  input_handler.rs  mod.rs  (+4 more)
modules/wcanvas/src/animation/: animation.rs  builder.rs  clip.rs  easing.rs  manager.rs  mod.rs  presets.rs  track.rs  types.rs
modules/wcanvas/src/assets/: mod.rs
modules/wcanvas/src/audio/: mod.rs
modules/wcanvas/src/components/: mod.rs
modules/wcanvas/src/debug/: mod.rs
modules/wcanvas/src/formats/: mod.rs
modules/wcanvas/src/input/: touch.rs
modules/wcanvas/src/materials/: mod.rs
modules/wcanvas/src/multicanvas/: mod.rs
modules/wcanvas/src/offscreen/: mod.rs
modules/wcanvas/src/particles/: mod.rs
modules/wcanvas/src/perf/: mod.rs
modules/wcanvas/src/postprocess/: mod.rs
modules/wcanvas/src/render/: mod.rs
modules/wcanvas/src/scene/: mod.rs
modules/wcanvas/src/types/: mod.rs
modules/wcanvas/src/ui/: mod.rs
modules/wcanvas/src/webgl/: mod.rs
modules/wcanvas/src/xr/: mod.rs
(+5158 files in other folders)
